<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crux.ventapp.RCControlActivity"
    tools:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_forward"
        android:background="@drawable/button_back"
        android:textColor="@android:color/white"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button_right"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_left"
        android:textColor="@android:color/white"
        android:background="@drawable/button_back"
        android:layout_marginStart="32dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_forward"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_right"
        android:textColor="@android:color/white"
        android:background="@drawable/button_back"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="92dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button_forward" />

    <Button
        android:id="@+id/button_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_backward"
        android:textColor="@android:color/white"
        android:background="@drawable/button_back"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button_forward"
        android:layout_marginTop="79dp"
        app:layout_constraintTop_toBottomOf="@+id/button_forward"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button_forward" />

    <Button
        android:id="@+id/button_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_disconnected"
        android:background="@drawable/button_del"
        android:textColor="@android:color/white"
        android:padding="5dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
