<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crux.ventapp.DeviceListActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/btContionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/bt_condition_text_off"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.501" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSearch"
        android:layout_centerHorizontal="true"
        android:text="@string/show_paired_device"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btConditionImage"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_device"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btConditionImage"
        android:layout_marginStart="5dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/btnPair"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnPair"
        android:layout_alignRight="@+id/btConditionImage"
        android:layout_marginLeft="5dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPair"
        android:layout_alignStart="@+id/btnPair"
        android:text="@string/bt_switch"
        app:layout_constraintRight_toLeftOf="@+id/btConditionImage"
        android:layout_marginRight="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@+id/btConditionImage"
        android:layout_alignLeft="@+id/btnPair" />

    <ImageView
        android:id="@+id/btConditionImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bt_off"
        android:layout_alignTop="@+id/btSwitch"
        android:layout_toEndOf="@+id/btContionText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="@+id/btnPair"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/btContionText"
        android:layout_toRightOf="@+id/btContionText"
        android:layout_marginRight="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
